Added boilerplate and began html code

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="./resources/style.css" type="text/css" rel="stylesheet">
     <title>Excursion</title>
   </head>
   <body>
-    <h1></h1>
+    <h1>Discover hidden places in the world around you</h1>
+  <div id="download">
+    <p><a href="#download">Download Excursion (Coming soon!)</a></p>
+
   </body>
 </html>
