--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <h1>Discover hidden places in the world around you</h1>
   <div id="download">
     <p><a href="#download">Download Excursion (Coming soon!)</a></p>
-
-  </body>
+    <video autoplay muted loop src="./resources/videos/excursion.mp4"> Sorry, your browser doesn't support embedded videos.>
+    </video>
+  </div>
+  <div>
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <img src="./resources/images/camp.jpg">
+    <p><img src="./resources/images/phone.png"></p>
+    <h2>Coming Soon for the iPhone and Android</h2>
+    <p><a href="#download">Download Excursion (Coming soon!)</a></p>
+  </div>
+  <div class="copyright">
+    <p>© Excursion</p>
+  </div>
+   </body>
 </html>
